--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   						  <ul id="menu">
   						    <a href="#"><li>Home</li></a>
   						    <a href="#"><li>Services</li></a>
-  						    <a href="#"><li>Store</li></a>
+  						    <a href="store.html"><li>Store</li></a>
   						    <a href="#"><li>About</li></a>
   						    <a href="#" target="_blank"><li>Contacts</li></a>
   						  </ul>
@@ -185,7 +185,7 @@
 				<h4>About</h4>
 			</div>
 			<div class="col-md-8 about-text">
-				<p>I make jewelry as well as engagement and engagement rings to order, I conduct<br> master-classes.<br>All the jewerly i sell is made by hand. That's why the production period reaches<br>two weeks from the moment of prepayment.<br>After registration of your purchase I will contact you and we will discuss all details<br>and terms.<br>Answers to your questions you can find in the FAQ section.</p>
+				<p>I make jewelry as well as engagement and engagement rings to order, I conduct master-classes. All the jewerly i sell is made by hand. That's why the production period reachestwo weeks from the moment of prepayment.After registration of your purchase I will contact you and we will discuss all detailsand terms.Answers to your questions you can find in the FAQ section.</p>
 			</div>
 			<div class="col-md-2 about-img"><img src="img/profile.jpg" alt="#" /></div>
 		</div>
@@ -196,7 +196,7 @@
 <div class="contacts">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-5 cont-block">
+			<div class="col-md-4 cont-block">
 				<h4>Contacts</h4>
 				<div class="cont-text">
 					<ul>
@@ -207,8 +207,8 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-md-7">
-				<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af304e2334219a1f7d9d28535c3971b205f8341d04a21787a260a7b49d42d393e&amp;source=constructor" width="1095" height="800" frameborder="0"></iframe>
+			<div class="col-md-8">
+				<iframe class="map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Af304e2334219a1f7d9d28535c3971b205f8341d04a21787a260a7b49d42d393e&amp;source=constructor" width="1250" height="500" frameborder="0"></iframe>
 			</div>
 		</div>
 	</div>
