--- a/jewerly.html
+++ b/jewerly.html
@@ -27,7 +27,7 @@
   						  <ul id="menu">
   						    <a href="index.html"><li>Home</li></a>
   						    <a href="#"><li>Services</li></a>
-  						    <a href="#"><li>Store</li></a>
+  						    <a href="store.html"><li>Store</li></a>
   						    <a href="#"><li>About</li></a>
   						    <a href="#" target="_blank"><li>Contacts</li></a>
   						  </ul>
